--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install: pip install cookiecutter tox
 env:
   - DJANGO_SETTINGS_MODULE=rotest.common.django_utils.settings
 script:
-  - cookiecutter . plugin_name=sample_output_handler
+  - cookiecutter . --no-input plugin_name=sample_output_handler
   - cd rotest-sample-output-handler
   - pip install .
   - rotest --help | grep sample_output_handler
